--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "react-cookie": "^4.0.0",
         "react-dom": "^16.8.6",
         "react-feather": "^1.1.6",
-        "react-scripts": "3.0.1"
+        "react-scripts": "3.0.1",
+        "universal-cookie": "^4.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
